# Mental-Health-System

./: .gitignore  README.md
api/: Emotion.py  Readme.md  main.py
backend/: .env.development  .env.template  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py  middlewares.py
backend/app/core/: models.py
backend/app/core/image/: Emotion.py
backend/app/db/: main.py
backend/app/routers/Evaluation/: models.py  repository.py
backend/app/routers/alert/: models.py
backend/app/routers/chat/: controller.py  main.py  models.py  repository.py
backend/app/routers/image/: controller.py  main.py
backend/app/routers/users/: main.py  models.py  repository.py
backend/app/utils/: logger.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.vue  main.js  manifest.json  pages.json
frontend/src/pages/: index.vue
frontend/src/pages/chat/: chatIndex.vue
frontend/src/pages/component/common/: Navbar.vue
frontend/src/pages/log/: logIndex.vue
frontend/src/pages/my/: myIndex.vue
frontend/src/static/: base.scss
frontend/src/store/: appInfo.js
