[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "deepface>=0.0.93",
    "fastapi>=0.115.8",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "tensorflow-intel>=2.18.0",
    "tensorflow>=2.15.0",
    "tf-keras>=2.18.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.38",
]
